--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,25 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Smart Money
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h1>Saldo: $2.201,5</h1>
+  <button (click)="addEntry()">Adicionar</button>
+  
+  <h3>Categorias</h3>
+  <ul>
+    <li>Alimentação: $200</li>
+    <li>Combustível: $20</li>
+    <li>Aluguel: $120</li>
+  </ul>
+
+  <h3>Últimos Lançamentos</h3>
+  <ul>
+    <li>Padaria Asa: $10</li>
+    <li>Supermecado CompreMax: $190</li>
+  </ul>
 </ion-content>
